Fix input stacking on Firefox

--- a/src/modules/Stripe/Form/styles.module.css
+++ b/src/modules/Stripe/Form/styles.module.css
@@ -13,6 +13,10 @@
   display: flex;
 }
 
+.nameInputs input {
+  min-width: 0;
+}
+
 .nameInputs input:first-of-type {
   margin-right: 4px;
 }
